# flexflow-serve

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gpqa.json  math500_verified.json  requirements.txt  setup.py  swe_bench_verified.json
.github/: runs-on.yml
.github/workflows/: build.yml  clang-format-check.yml  docker-build.yml  gpu-ci.yml  pip-deploy.yml  pip-install.yml  shell-check.yml
.github/workflows/helpers/: install_cudnn.sh  install_dependencies.sh  install_nccl.sh
cmake/: cuda.cmake  flash_attn.cmake  flashinfer.cmake  legion.cmake
cmake/pip_install/: CMakeLists.txt
conda/: flexflow.yml
config/: config.inc  config.linux
docker/: build.sh  publish.sh  pull.sh  run.sh
docker/flexflow-environment/: Dockerfile
include/flexflow/: attention_config.h  batch_config.h  config.h  ffconst.h  flash_api.h  flexflow_c.h  layer.h  machine_view.h  model.h  op_meta.h  operator.h  page_manager.h  request_manager.h  simulator.h
include/flexflow/ops/: add_bias_residual_layer_norm.h  argmax.h  embedding.h  fused.h  inc_multihead_self_attention.h  inc_multihead_self_attention_params.h  layer_norm.h  linear.h  lora_linear.h  residual_layer_norm.h  residual_rms_norm.h  rms_norm.h  sigmoid_silu_multi.h  softmax.h  spec_inc_multihead_self_attention.h  spec_inc_multihead_self_attention_params.h  tree_inc_multihead_self_attention.h  tree_inc_multihead_self_attention_params.h
include/flexflow/ops/kernels/: embedding_kernels.h  inc_multihead_self_attention_kernels.h  linear_kernels.h  lora_linear_kernels.h  residual_rms_norm_kernels.h  rms_norm_kernels.h  softmax_kernels.h
include/flexflow/parallel_ops/: allreduce.h  allreduce_params.h  combine.h  parallel_identity.h  parallel_identity_params.h  replicate.h
include/flexflow/utils/: cuda_helper.h  peft_weight_allocator.h
inference/: inference_wrapper.in
inference/flexllm/: CMakeLists.txt  peft_train.cc
inference/incr_decoding/: CMakeLists.txt  incr_decoding.cc
inference/models/: falcon.cc  falcon.h  llama.cc  llama.h  mpt.cc  mpt.h  opt.cc  opt.h  starcoder.cc  starcoder.h
inference/peft/: CMakeLists.txt  peft.cc
inference/python/: chat.py  ff_peft.py  incr_decoding.py  save_dataset.py  spec_infer.py
inference/python/peft_demo/: demo.ipynb  demo.py
inference/python/streamlit/: README.md  app.py  fastapi_incr.py
inference/spec_infer/: CMakeLists.txt  spec_infer.cc
python/: flexflow_python_build.py
python/flexflow/: config.py  type.py
python/flexflow/core/: __init__.py  flexflow_cffi.py
python/flexflow/serve/: __init__.py  serve.py
python/flexflow/serve/models/: base.py  falcon.py  llama.py  mpt.py  opt.py  starcoder.py
src/c/: flexflow_c.cc
src/ops/: add_bias_residual_layer_norm.cc  add_bias_residual_layer_norm.cpp  add_bias_residual_layer_norm.cu  aggregate.cc  aggregate_spec.cc  arg_topk.cc  argmax.cc  argmax.cpp  argmax.cu  attention.cc  attention_impl.cu  batch_matmul.cc  batch_norm.cpp  batch_norm.cu  beam_topk.cc  cache.cc  concat.cc  conv_2d.cc  element_binary.cc  element_unary.cc  embedding.cc  experts.cc  fused.cc  fused.cpp  fused.cu  group_by.cc  inc_multihead_self_attention.cc  inc_multihead_self_attention.cpp  inc_multihead_self_attention.cu  layer_norm.cc  layer_norm.cpp  layer_norm.cu  linear.cc  lora_linear.cc  pool_2d.cc  residual_layer_norm.cc  residual_layer_norm.cpp  residual_layer_norm.cu  residual_rms_norm.cc  rms_norm.cc  (+13 more)
src/ops/kernels/: dropout_kernels.cpp  dropout_kernels.cu  element_binary_kernels.cu  embedding_kernels.cpp  embedding_kernels.cu  linear_kernels.cpp  linear_kernels.cu  lora_linear_kernels.cpp  lora_linear_kernels.cu  residual_rms_norm_kernels.cpp  residual_rms_norm_kernels.cu  rms_norm_kernels.cpp  rms_norm_kernels.cu  softmax.cpp  softmax.cu
src/parallel_ops/: allreduce.cc  combine.cc  parallel_identity.cc  replicate.cc
src/parallel_ops/kernels/: allreduce_kernels.cu  parallel_identity_kernels.cu
src/runtime/: batch_config.cc  beam_search_batch_config.cc  cuda_helper.cu  file_loader.cc  graph.cc  inference_manager.cc  machine_model.cc  model.cc  model.cu  operator.cc  page_manager.cc  peft_weight_allocator.cc  request_manager.cc  request_manager.cu  simulator.cc  substitution.cc  tree_verify_batch_config.cc
tests/: fine_grained_alignment_test.sh  inference_tests.sh  peft_test.sh  python_interface_test.sh
tests/align/: test_all_operators.sh
tests/align/peft_flash_attn/: align.py  align_2_tensors_from_pt.py  launch.json  peft_flash_debug_note  test_bwd_2x_grad_buf.py
tests/inference/: benchmark_specinfer.py  cpp_inference_tests.sh  generate_inf_test_configs.py  huggingface_inference.py  inference_alignment_test.py  spec_infer.json  test_inference_output.py
tests/peft/: hf_finetune.py  hf_serve.py  hf_train.py  hf_utils.py  peft_alignment_test.py
tests/peft/alignment/: align_test_utils.py
